--- a/index.html
+++ b/index.html
@@ -10,17 +10,14 @@
 
 </head>
 <body>
-    <div class="first-name-box">
-        <p class="name">R</p>
-        <p>oland</p>
-        <p></p>
+    <div id="container">
+        <div>
+            Roland
+        </div>
+        <div>
+            Picture
+        </div>
     </div>
-    <div>
-        Student, Musician, Coder
-    </div>
-    <span class="material-icons">
-        face
-    </span>
         
     
 </body>
