--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Roland Saavedra</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -10,11 +11,12 @@
 
 </head>
 <body>
-    <div id="container">
-        <div>
-            Roland
+    <div id="container" style="background-color: black; color:white;">
+        <div class="half" id="left">
+            <h2> I'm </h2>
+            <h1>Roland Saavedra</h1>
         </div>
-        <div>
+        <div  class="half id="right">
             Picture
         </div>
     </div>
