--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 
 </head>
 <body>
-    <div id="container" style="background-color: black; color:white;">
+    <div id="container">
         <div class="half" id="left">
-            <h2> I'm </h2>
-            <h1>Roland Saavedra</h1>
+            <h2 style="color: #90fcf9"> </h2>
+            <div id="namebox">
+                <h1 id="bigR">R</h1>
+                <h1>oland &nbsp;</h1>
+                <h1 id="bigS">S</h1>
+                <h1>aavedra</h1>
+            </div>
         </div>
         <div  class="half id="right">
             Picture
