--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 <body>
     <div id="container">
         <div class="half" id="left">
-            <h2 style="color: #90fcf9"> </h2>
-            <div id="namebox">
-                <h1 id="bigR">R</h1>
-                <h1>oland &nbsp;</h1>
-                <h1 id="bigS">S</h1>
-                <h1>aavedra</h1>
+            <h2 style="color: snow"> </h2>
+            <div id="titlebox">
+                <h1 style="background-color: #ed254e; ">Roland Saavedra</h1>
+                
+                <div id="attributes">
+                    <h2 style="background-color: #5BC0EB;flex-grow: 1;">Student</h2>
+                    <h2 style="background-color: #FDE12D;flex-grow: 1;">Musician</h2>
+                    <h2 style="background-color: #9046cf;flex-grow: 1;">Coder</h2>
+                </div>
             </div>
+            
         </div>
         <div  class="half id="right">
             Picture
