--- a/index.html
+++ b/index.html
@@ -25,8 +25,20 @@
             </div>
             
         </div>
-        <div  class="half id="right">
-            Picture
+        <div  class="half" id="right">
+            <div class="box">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+            <div class="box">5</div>
+            <div class="box">6</div>
+            <div class="box">7</div>
+            <div class="box">8</div>
+            <div class="box">9</div>
+            <div class="box">10</div>
+        </div>
+        <div class="half">
+            test
         </div>
     </div>
         
