--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-
+    <script src="/main.js"></script>
 </head>
 <body>
     <div id="container">
         <div class="half" id="left">
             <h2 style="color: snow"> </h2>
             <div id="titlebox">
-                <h1 style="background-color: #ed254e; ">Roland Saavedra</h1>
+                <h1 style="background-color: #ed254e; padding-left: ;">Roland Saavedra</h1>
                 
                 <div id="attributes">
                     <h2 style="background-color: #5BC0EB;flex-grow: 1;">Student</h2>
@@ -35,6 +35,8 @@
             <div class="box">7</div>
             <div class="box">8</div>
             <div class="box">9</div>
+            <div class="box">10</div>
+            <div class="box">10</div>
             <div class="box">10</div>
         </div>
 
