--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/more.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -12,10 +13,10 @@
 </head>
 <body>
     <div id="container">
-        <div class="half" id="left">
+        <div id="title">
             <h2 style="color: snow"> </h2>
             <div id="titlebox">
-                <h1 style="background-color: #ed254e; padding-left: ;">Roland Saavedra</h1>
+                <h1 style="background-color: #ed254e; ">Roland Saavedra</h1>
                 
                 <div id="attributes">
                     <h2 style="background-color: #5BC0EB;flex-grow: 1;">Student</h2>
@@ -25,19 +26,42 @@
             </div>
             
         </div>
-        <div  class="half" id="right">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">4</div>
-            <div class="box">5</div>
-            <div class="box">6</div>
-            <div class="box">7</div>
-            <div class="box">8</div>
-            <div class="box">9</div>
-            <div class="box">10</div>
-            <div class="box">10</div>
-            <div class="box">10</div>
+
+        <div id="content">
+        <div class="banner coding">
+            CODING
+        </div>
+        <div class="content-grid">
+            <iframe class="videobox" src="https://www.youtube-nocookie.com/embed/PgIjPwF53fQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+            <iframe class="videobox" src="https://www.youtube.com/embed/BHvIM2m4myw" title="YouTube video player" frameborder="0" allow=" autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="videobox" src="https://www.youtube.com/embed/btgmxYoFeWg" title="YouTube video player" frameborder="0" allow=" autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="videobox" <iframe width="560" height="315" src="https://www.youtube.com/embed/PUCvnLcgXzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="videobox" <iframe width="560" height="315" src="https://www.youtube.com/embed/1xrchKgoMtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="banner music">
+            MUSIC
+        </div>
+        <div class="content-grid">
+            <div class="box music"></div>
+            <div class="box music"></div>
+            <div class="box music"></div>
+            <div class="box music"></div>
+            <div class="box music"></div>
+            <div class="box music"></div>
+        </div>
+
+        <div class="banner education">
+            EDUCATION
+        </div>
+        <div class="content-grid">
+            <div class="box education"></div>
+            <div class="box education"></div>
+            <div class="box education"></div>
+            <div class="box education"></div>
+            <div class="box education"></div>
+            <div class="box education"></div>
+        </div>
         </div>
 
     </div>
