prepare for flex magic

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 <body>
     <div id="container">
         <div id="title">
-            <h2 style="color: snow"> </h2>
             <div id="titlebox">
-                <h1 style="background-color: #ed254e; ">Roland Saavedra</h1>
+                <h1 id="name">Roland Saavedra</h1>
                 
                 <div id="attributes">
                     <h2 style="background-color: #5BC0EB;flex-grow: 1;">Student</h2>
@@ -36,8 +35,8 @@
             </iframe>
             <iframe class="videobox" src="https://www.youtube.com/embed/BHvIM2m4myw" title="YouTube video player" frameborder="0" allow=" autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <iframe class="videobox" src="https://www.youtube.com/embed/btgmxYoFeWg" title="YouTube video player" frameborder="0" allow=" autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="videobox" <iframe width="560" height="315" src="https://www.youtube.com/embed/PUCvnLcgXzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="videobox" <iframe width="560" height="315" src="https://www.youtube.com/embed/1xrchKgoMtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="videobox"src="https://www.youtube.com/embed/PUCvnLcgXzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="videobox"src="https://www.youtube.com/embed/1xrchKgoMtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="banner music">
             MUSIC
