Navbar and Name shadows

--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
     <script src="/main.js"></script>
 </head>
 <body>
+    <div class="nav">
+        <a class="nav-button" href="">Coding</a>
+        <a class="nav-button" href="">Music</a>
+        <a class="nav-button" href="">Education</a> 
+        <a class="nav-button" href="">About</a>
+        <a class="nav-button" href="" onclick="">Contact</a>
+    </div>
     <div id="container">
         <div id="title">
             <div id="titlebox">
                 <h1 id="name">Roland Saavedra</h1>
                 
                 <div id="attributes">
-                    <h2 style="background-color: #5BC0EB;flex-grow: 1;">Student</h2>
-                    <h2 style="background-color: #FDE12D;flex-grow: 1;">Musician</h2>
-                    <h2 style="background-color: #9046cf;flex-grow: 1;">Coder</h2>
+                    <h2 style="background-color: #5BC0EB; ">Student</h2>
+                    <h2 style="background-color: #FDE12D;">Musician</h2>
+                    <h2 style="background-color: #9046cf;">Coder</h2>
                 </div>
             </div>
             
