idk y this shit dont work

--- a/index.html
+++ b/index.html
@@ -34,40 +34,62 @@
         </div>
 
         <div id="content">
-        <div class="banner coding">
-            CODING
-        </div>
-        <div class="content-grid">
-            <iframe class="videobox" src="https://www.youtube-nocookie.com/embed/PgIjPwF53fQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
-            <iframe class="videobox" src="https://www.youtube.com/embed/BHvIM2m4myw" title="YouTube video player" frameborder="0" allow=" autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="videobox" src="https://www.youtube.com/embed/btgmxYoFeWg" title="YouTube video player" frameborder="0" allow=" autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="videobox"src="https://www.youtube.com/embed/PUCvnLcgXzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="videobox"src="https://www.youtube.com/embed/1xrchKgoMtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="banner music">
-            MUSIC
-        </div>
-        <div class="content-grid">
-            <div class="box music"></div>
-            <div class="box music"></div>
-            <div class="box music"></div>
-            <div class="box music"></div>
-            <div class="box music"></div>
-            <div class="box music"></div>
-        </div>
+            <div class="banner music">
+                ABOUT
+            </div>
+            <div class="text-box">
+                <div class="text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam blanditiis et odio provident ipsum iste, iure, tempore minima soluta reprehenderit optio aspernatur nostrum temporibus in quasi porro ipsa. Alias, at?
+                </div>
+            </div>
+            <div class="banner coding">
+                CODING
+            </div>
+            <div class="content-grid">
+                <iframe class="videobox" src="https://www.youtube-nocookie.com/embed/PgIjPwF53fQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+                <iframe class="videobox" src="https://www.youtube.com/embed/BHvIM2m4myw" title="YouTube video player" frameborder="0" allow=" autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="videobox" src="https://www.youtube.com/embed/btgmxYoFeWg" title="YouTube video player" frameborder="0" allow=" autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="videobox"src="https://www.youtube.com/embed/PUCvnLcgXzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="videobox"src="https://www.youtube.com/embed/1xrchKgoMtw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            
+            <div class="banner" style="background-color: #9046cf;">
+                SKILLS
+            </div>
+            <div class="skills">
+                <img class="block-image" src="images/ISO_C++_Logo.svg"/>
+                <img class="block-image" src="images/Java_programming_language_logo.svg"/>
+                <img class="block-image" src="images/Python-logo-notext.svg" class="block-image">
+                <img class="block-image" src="images/unity-seeklogo.com.svg"  />
+                <img class="block-image" src="images/Unofficial_JavaScript_logo_2.svg" />
+                <img class="block-image" src="images/c-sharp-c-seeklogo.com.svg" />
+                <img class="block-image" src="images/react-seeklogo.com.svg" />
+                <img class="block-image" src="images/firebase-seeklogo.com.svg" />
+            </div>
+            <div class="banner music">
+                MUSIC
+            </div>
+            <div class="content-grid">
+                <div class="box music"></div>
+                <div class="box music"></div>
+                <div class="box music"></div>
+                <div class="box music"></div>
+                <div class="box music"></div>
+                <div class="box music"></div>
+            </div>
 
-        <div class="banner education">
-            EDUCATION
-        </div>
-        <div class="content-grid">
-            <div class="box education"></div>
-            <div class="box education"></div>
-            <div class="box education"></div>
-            <div class="box education"></div>
-            <div class="box education"></div>
-            <div class="box education"></div>
-        </div>
+            <div class="banner education">
+                EDUCATION
+            </div>
+            <div class="content-grid">
+                <div class="box education"></div>
+                <div class="box education"></div>
+                <div class="box education"></div>
+                <div class="box education"></div>
+                <div class="box education"></div>
+                <div class="box education"></div>
+            </div>
         </div>
 
     </div>
