--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
                     <h2>Developer</h2>
                     <h4>From games and apps to websites (like this one), I love to build anything that interests me.
                     </h4>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, sed. Culpa quis odit aliquid optio harum. Numquam, delectus consectetur. Dicta animi eum sunt odit iusto maiores perspiciatis dolores doloribus minima beatae. Minus eum aut iure tenetur vero, iusto enim voluptates vel? Quod veniam dolor beatae eum ipsam cumque fugiat optio labore ut earum saepe sed a placeat minus dolores nesciunt, suscipit mollitia sint, consequatur cum nam incidunt aliquid nemo adipisci? Delectus iusto cupiditate, minus eius consequuntur inventore accusantium aut dolorum consectetur saepe sint, nam tempore voluptatum voluptatibus molestiae reprehenderit fugiat. Aliquid aut modi alias laboriosam, consectetur repudiandae dolor voluptatum et.
+                    </p>
                 </div>
                 <div id="projects">
-                <h3>Projects</h3>>
+                <h3 class="header">Projects</h3>
                 <div class="carousel">
                     <iframe src="https://www.youtube.com/embed/PgIjPwF53fQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <iframe src="https://www.youtube.com/embed/V9ieLpEMymA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -47,10 +50,8 @@
                     <img src="images/Unofficial_JavaScript_logo_2.svg">
                 </div>
                 </div>
-                <h3>Background</h3>>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, sed. Culpa quis odit aliquid optio harum. Numquam, delectus consectetur. Dicta animi eum sunt odit iusto maiores perspiciatis dolores doloribus minima beatae. Minus eum aut iure tenetur vero, iusto enim voluptates vel? Quod veniam dolor beatae eum ipsam cumque fugiat optio labore ut earum saepe sed a placeat minus dolores nesciunt, suscipit mollitia sint, consequatur cum nam incidunt aliquid nemo adipisci? Delectus iusto cupiditate, minus eius consequuntur inventore accusantium aut dolorum consectetur saepe sint, nam tempore voluptatum voluptatibus molestiae reprehenderit fugiat. Aliquid aut modi alias laboriosam, consectetur repudiandae dolor voluptatum et.
-                </p>
+                <h3>Background</h3>
+                
             </div>
             
         </div>
